todoyu core changelog

core 2.1.2 - ???
	* Bugfix: #185 Deleting an access role in sysmanager caused a fatal error (invalid function call)
	* Bugfix: #189 Problems with character set conversion when server character sets are not utf-8
	* Change: TodoyuTime::parseDateString has now a fallback to strtotime() if date was not recognized before
	* Change: Made TodoyuLabelManager::$cache private
	* Change: Made TodoyuLabelManger::getFallbackLocales private
	* Change: Comment out unused database relation input field (relations have their own sub fields)
	* Add: Added doubleEncode parameter for TodoyuString::htmlentities
	* Remove: Removed unused function TodoyuArray::convertToUTF8Array

	

core 2.1.1 - 2011-07-25
	* Feature: Added optional event identifier to error/success notifications- notifications of the same event are now closing preceding notes of the same event (if present)
	* Bugfix: Installer- Fixed icon display bug of installer steps with long labels
	* Bugfix: open duration picker wasn't hidden when closing parent dialog
	* Bugfix: Added more tags to the badHtmlTags list to make sure they are escaped and not rendered (ex: embed)
	* Bugfix: Parsing dates in british english format failed (was interpreted as american)
	* Bugfix: List of available locales contained default locale twice
	* Bugfix: Timerange date selector had to high z-index
	* Bugfix: Detect also links in this format: "mailto:name@domain.com"
	* Bugfix: Archive manager creates now valid zip archives on windows (valid extraction on linux)
	* Bugfix: Contextmenu sub menu works now correct on linux firefox 5
	* Bugfix: Validate empty dates as valid
	* Changed: Rename Todoyu.Notification.onValueChange to validateDateFormat
	* Changed: Rename Todoyu.Notification.observeChange to addValidator
	* Changed: Padding of inline filter forms to prevent layout problems
	* Changed: Only set curl option CURLOPT_FOLLOWLOCATION when safe mode is not enabled